// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render person row with ability to edit all 1`] = `
<div
  className="DutyShiftEdit-PersonRow"
>
  <DatePicker
    className="DutyShiftEdit-StartDate"
    date={null}
    disabled={false}
    enabledDays={
      Object {
        "end": undefined,
        "start": undefined,
      }
    }
    hasClear={true}
    name="person-start"
    onChange={[Function]}
  />
  <div
    className="DutyShiftEdit-DatesDelimiter"
  >
     – 
  </div>
  <DatePicker
    className="DutyShiftEdit-EndDate"
    date={null}
    disabled={false}
    enabledDays={
      Object {
        "end": undefined,
        "start": undefined,
      }
    }
    hasClear={true}
    name="person-end"
    onChange={[Function]}
  />
  <button2
    icon={
      Object {
        "mods": Object {
          "glyph": "trash",
        },
      }
    }
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "delete-button",
        "mods": Object {
          "hidden": false,
        },
      }
    }
    size="s"
    tabIndex={0}
    theme="clear"
    view="default"
  />
</div>
`;

exports[`Should render person row with dates 1`] = `
<div
  className="DutyShiftEdit-PersonRow"
>
  <DatePicker
    className="DutyShiftEdit-StartDate"
    date={2019-01-01T00:00:00.000Z}
    disabled={true}
    enabledDays={
      Object {
        "end": 2019-01-10T20:59:59.999Z,
        "start": 2018-12-24T21:00:00.000Z,
      }
    }
    hasClear={true}
    name="person-start"
    onChange={[Function]}
  />
  <div
    className="DutyShiftEdit-DatesDelimiter"
  >
     – 
  </div>
  <DatePicker
    className="DutyShiftEdit-EndDate"
    date={2019-01-10T00:00:00.000Z}
    disabled={true}
    enabledDays={
      Object {
        "end": 2019-01-20T20:59:59.999Z,
        "start": 2018-12-31T21:00:00.000Z,
      }
    }
    hasClear={true}
    name="person-end"
    onChange={[Function]}
  />
  <button2
    icon={
      Object {
        "mods": Object {
          "glyph": "trash",
        },
      }
    }
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "delete-button",
        "mods": Object {
          "hidden": true,
        },
      }
    }
    size="s"
    tabIndex={0}
    theme="clear"
    view="default"
  />
</div>
`;

exports[`Should render person row with invalid dates 1`] = `
<div
  className="DutyShiftEdit-PersonRow"
>
  <DatePicker
    className="DutyShiftEdit-StartDate DutyShiftEdit-InvalidField"
    date={null}
    disabled={true}
    enabledDays={
      Object {
        "end": undefined,
        "start": undefined,
      }
    }
    hasClear={true}
    name="person-start"
    onChange={[Function]}
  />
  <div
    className="DutyShiftEdit-DatesDelimiter"
  >
     – 
  </div>
  <DatePicker
    className="DutyShiftEdit-EndDate DutyShiftEdit-InvalidField"
    date={null}
    disabled={true}
    enabledDays={
      Object {
        "end": undefined,
        "start": undefined,
      }
    }
    hasClear={true}
    name="person-end"
    onChange={[Function]}
  />
  <button2
    icon={
      Object {
        "mods": Object {
          "glyph": "trash",
        },
      }
    }
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "delete-button",
        "mods": Object {
          "hidden": true,
        },
      }
    }
    size="s"
    tabIndex={0}
    theme="clear"
    view="default"
  />
</div>
`;

exports[`Should render person row without person 1`] = `
<div
  className="DutyShiftEdit-PersonRow"
>
  <DatePicker
    className="DutyShiftEdit-StartDate"
    date={null}
    disabled={true}
    enabledDays={
      Object {
        "end": undefined,
        "start": undefined,
      }
    }
    hasClear={true}
    name="person-start"
    onChange={[Function]}
  />
  <div
    className="DutyShiftEdit-DatesDelimiter"
  >
     – 
  </div>
  <DatePicker
    className="DutyShiftEdit-EndDate"
    date={null}
    disabled={true}
    enabledDays={
      Object {
        "end": undefined,
        "start": undefined,
      }
    }
    hasClear={true}
    name="person-end"
    onChange={[Function]}
  />
  <button2
    icon={
      Object {
        "mods": Object {
          "glyph": "trash",
        },
      }
    }
    mix={
      Object {
        "block": "DutyShiftEdit",
        "elem": "delete-button",
        "mods": Object {
          "hidden": true,
        },
      }
    }
    size="s"
    tabIndex={0}
    theme="clear"
    view="default"
  />
</div>
`;
